# SimClinic-Project-Assignment

./: CMakeLists.txt  README.md
src/: main.cpp
src/app/: LinkedList.cpp  LinkedList.h  app.cpp  app.h  command.cpp  command.h  doctor.cpp  doctor.h  launcher.cpp  launcher.h  message.cpp  message.h  node.cpp  node.h  nurse.cpp  nurse.h  patient.cpp  patient.h  staff.cpp  staff.h  utils.cpp  utils.h
test/: CMakeLists.txt  tester.cpp
