option(TASK_1_TEST_CASES "Run the test cases for Task 1" ON)
option(TASK_2_TEST_CASES "Run the test cases for Task 2" ON)

# Add the test executable and link it with the library targets
add_executable(tester_app ./tester.cpp)

# Include the "src" directory to access the source files
target_include_directories(tester_app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src)

# Link the subdirectory targets to the test executable
target_link_libraries(tester_app SrcTarget SrcAppSupportTarget)

if (TASK_1_TEST_CASES)
  add_test(NAME Task1-T1 COMMAND tester_app 1)
  add_test(NAME Task1-T2 COMMAND tester_app 2)
  add_test(NAME Task1-T3 COMMAND tester_app 3)
  add_test(NAME Task1-T4 COMMAND tester_app 4)
  add_test(NAME Task1-T5 COMMAND tester_app 5)
  add_test(NAME Task1-T6 COMMAND tester_app 6)
  add_test(NAME Task1-T7 COMMAND tester_app 7)
  add_test(NAME Task1-T8 COMMAND tester_app 8)
  add_test(NAME Task1-T9 COMMAND tester_app 9)
  add_test(NAME Task1-T10 COMMAND tester_app 10)
  add_test(NAME Task1-T11 COMMAND tester_app 11)
  add_test(NAME Task1-T12 COMMAND tester_app 12)
  add_test(NAME Task1-T13 COMMAND tester_app 13)
  add_test(NAME Task1-T14 COMMAND tester_app 14)
endif()

if (TASK_2_TEST_CASES)
  add_test(NAME Task2-T1 COMMAND tester_app 15)
  add_test(NAME Task2-T2 COMMAND tester_app 16)
  add_test(NAME Task2-T3 COMMAND tester_app 17)
  add_test(NAME Task2-T4 COMMAND tester_app 18)
  add_test(NAME Task2-T5 COMMAND tester_app 19)
  add_test(NAME Task2-T6 COMMAND tester_app 20)
  add_test(NAME Task2-T7 COMMAND tester_app 21)
  add_test(NAME Task2-T8 COMMAND tester_app 22)
  add_test(NAME Task2-T9 COMMAND tester_app 23)
  add_test(NAME Task2-T10 COMMAND tester_app 24)
  add_test(NAME Task2-T11 COMMAND tester_app 25)
  add_test(NAME Task2-T12 COMMAND tester_app 26)
  add_test(NAME Task2-T13 COMMAND tester_app 27)
  add_test(NAME Task2-T14 COMMAND tester_app 28)
endif()
